# privaxy

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile — копия
.cargo/: config.toml
.github/workflows/: ci-mod.yml  ci.yml  update-filters.yaml
app/: Cargo.toml  Dioxus.toml
app/assets/: styles.css
app/src/: main.rs
app/src/components/: dashboard.rs  filters.rs  mod.rs  nav.rs  requests.rs  settings.rs
filterlists-api/src/: get.rs  lib.rs
patches/generational-box/: Cargo.toml
patches/generational-box/src/: entry.rs
privaxy/: Cargo.toml
privaxy/src/server/: blocker.rs  blocker_utils.rs  ca.rs  cert.rs  configuration.rs  lib.rs  main.rs  statistics.rs
privaxy/src/server/configuration/: network.rs
privaxy/src/server/proxy/: mitm.rs  mod.rs  serve.rs
privaxy/src/server/web_gui/: mod.rs
web_frontend/src/: blocking_enabled.rs  button.rs  dashboard.rs  filterlists.rs  filters.rs  general.rs  main.rs  requests.rs  save_button.rs  settings.rs  settings_textarea.rs  submit_banner.rs
