[workspace]
members = ["web_frontend", "privaxy"]

[profile.release]
lto = true
codegen-units = 8
opt-level = 3

[patch.crates-io]
# ring = { git = "https://github.com/briansmith/ring.git", branch = 'release-branch/0.17.12' }

# ring = { git = "https://github.com/mesalock-linux/ring-sgx.git", package = "ring" }
#ring = { git = "https://github.com/Lichtenshtein/ring.git", package = "ring" }

# Redirect both potential versions to fixed 0.17 branch
# "ring:0.16.20" = { git = "https://github.com/Lichtenshtein/ring.git", branch = "veracruz_0.16.20" }
# "ring:0.17.8" = { git = "https://github.com/Lichtenshtein/ring.git", branch = "veracruz_0.16.20" }

# Patch for the 0.16.x series
# ring_old = { git = "https://github.com/Lichtenshtein/ring.git", branch = "veracruz_0.16.20", package = "ring" }
# Patch for the 0.17.x series
# ring_new = { git = "https://github.com/integritee-network/ring-xous.git", branch = "bump-0.17.8", package = "ring" }

ring = { git = "https://github.com/integritee-network/ring-xous.git", branch = "bump-0.17.8" }

# If a dependency uses the integritee-network git specifically:
[patch."https://github.com/integritee-network/ring-xous.git"]
ring = { git = "https://github.com/Lichtenshtein/ring.git", branch = "veracruz_0.16.20" }
