[package]
name = "privaxy-app"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", default-features = false, features = ["liveview", "router", "fullstack", "macro", "signals", "asset", "document", "html", "hooks", "server"] }
axum = "0.8"
dioxus-fullstack = "0.7.3"
dioxus-liveview = { version = "0.7.3", features = ["axum"] }

# tokio = { version = "1.43", features = ["full"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "net", "time", "macros", "fs"] }

# Use rustls-tls-manual-roots (native-roots often fails on minimal router firmwares)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }

# Other dependencies...
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
num-format = { version = "0.4", features = ["std"] }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
privaxy = { path = "../privaxy" }

# portable-atomic = { version = "1.10", features = ["critical-section"] }
portable-atomic = { version = "1.10" }
critical-section = { version = "1.2", features = ["std"] }

[package.metadata.rules]
# This tells the compiler to replace atomics globally
"sync_atomic_64" = "portable_atomic"

[features]
liveview = ["dioxus/liveview", "dioxus/fullstack"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
