[package]
name = "privaxy"
description = "Next generation tracker and advertisement blocker"
version = "0.6.0"
edition = "2021"
authors = [
  "Pierre Barre <pierre@barre.sh>",
  "Josh McDaniel <80354972+joshrmcdaniel@users.noreply.github.com>"
]

[profile.release]
lto = true
codegen-units = 8
opt-level = 3

[package.metadata.deb]
maintainer = "Josh McDaniel <80354972+joshrmcdaniel@users.noreply.github.com>"
license-file = ["../LICENSE.txt", "4"]
maintainer-scripts = "debian/"
depends = "$auto"
assets = [
  ["debian/privaxy.service", "/lib/systemd/system/privaxy.service", "644"],
  ["target/release/privaxy", "/usr/bin/", "755"],
]

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[lib]
name = "privaxy"
path = "src/server/lib.rs"

[dependencies]
aws-lc-rs = { version = "1", features = ["bindgen"] }
hyper = { version = "0.14.32", features = ["full"] }
tokio = { version = "1.46.0", features = ["full"] }
serde_json = "1.0.141"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = { version = "0.7.15", features = ["full"] }
adblock = { version = "0.10.1" }
openssl = { version = "0.10.73", features = ["vendored"] }
include_dir = "0.7.4"
chrono = { version = "0.4.41", features = ["serde"] }
rustls = { version = "0.23.29" }
futures-util = "0.3.31"
wildmatch = "2.4.0"
http = "0.2.12"
ring = "0.17.14"
mime_guess = "2.0.5"
tokio-rustls = "0.26.2"
hyper-rustls = { version = "0.27.7", features = ["http1", "http2"] }
log = "0.4.27"
env_logger = "0.11.8"
uluru = "3.1.0"
regex = "1.11.1"
lazy_static = "1.5.0"
lol_html = "2.6.0"
crossbeam-channel = "0.5.15"
thiserror = "2.0.12"
url = "2.5.4"
futures = "0.3.31"
dirs = "6.0.0"
async-compression = { version = "0.4.27", features = ["futures-io", "gzip"] }
reqwest = { version = "0.12.22", features = [
  "stream",
  "rustls-tls",
  "gzip",
  "deflate",
  "json",
  "brotli",
] }
once_cell = "1.21.3"
serde-tuple-vec-map = "1.0.1"
base64 = "0.22.1"
warp = { version = "0.3.7", features = ["tls"] }
sha2 = "0.10.9"
hex = "0.4.3"
serde_with = "3.14.0"
filterlists-api = { path = "../filterlists-api", features = ["reqwest"] }
