[package]
name = "privaxy"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[lib]
name = "privaxy"
path = "src/server/lib.rs"

[dependencies]
hyper = { version = "1.8.1", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.89"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = { version = "0.7.4", features = ["full"] }
adblock = { version = "0.12.0" }
openssl = { version = "0.10.75", features = ["vendored"] }
include_dir = "0.7.3"
chrono = { version = "0.4.23", features = ["serde"] }
rustls = { version = "0.23.35", features = ["ring"] }
futures-util = "0.3.25"
wildmatch = "2.1.1"
http = "1.4.0"
mime_guess = "2.0.5"
tokio-rustls = "0.26.4"
hyper-rustls = { version = "0.27.7", features = ["http1", "http2"] }
log = "0.4.17"
env_logger = "0.11.8"
uluru = "3.1.0"
regex = "1.7.0"
lazy_static = "1.5.0"
lol_html = "2.7.0"
crossbeam-channel = "0.5.6"
thiserror = "2.0.17"
url = "2.3.1"
futures = "0.3.25"
dirs = "6.0.0"
async-compression = { version = "0.4.36", features = ["futures-io", "gzip"] }
reqwest = { version = "0.12.26", features = [
  "stream",
  "rustls-tls",
  "gzip",
  "deflate",
  "json",
  "brotli",
] }
once_cell = "1.16.0"
serde-tuple-vec-map = "1.0.1"
base64 = "0.22.1"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
rustls-pki-types = "1.0"
bytes = "1.5"
tokio-stream = "0.1"
