[package]
name = "privaxy"
version = "0.4.0"
edition = "2024"

[lib]
name = "privaxy"
path = "src/server/lib.rs"

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[dependencies]
# hyper = { version = "1.8.1", features = ["full"] }
# tokio = { version = "1.48.0", features = ["full"] }
# serde_json = "1.0.89"
# serde = { version = "1.0.228", features = ["derive"] }
hyper = { version = "1.5", features = ["full"] }
tokio = { version = "1.43", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# REMOVED: openssl = { version = "0.10.75", features = ["vendored"] }
# Use rustls exclusively for Mips compatibility
# rustls = { version = "0.23.35", features = ["ring"] }
# tokio-rustls = "0.26.4"
# hyper-rustls = { version = "0.27.7", features = ["http1", "http2"] }
# reqwest = { version = "0.12.26", default-features = false, features = ["stream", "rustls-tls-native-roots", "gzip", "deflate", "json", "brotli",] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
tokio-rustls = "0.26"
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls-manual-roots", "gzip", "deflate", "json", "brotli",] }

rcgen = { version = "0.13", features = ["pem", "ring"] }
rustls-pki-types = "1.0"
x509-parser = "0.16"    # Replacement for OpenSSL certificate parsing

toml = "0.9.8"
tokio-util = { version = "0.7.4", features = ["full"] }
adblock = { version = "0.12.0" }
include_dir = "0.7.3"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.25"
wildmatch = "2.1.1"
http = "1.4.0"
mime_guess = "2.0.5"
log = "0.4.17"
env_logger = "0.11.8"
uluru = "3.1.0"
regex = "1.7.0"
lazy_static = "1.5.0"
lol_html = "2.7.0"
crossbeam-channel = "0.5.6"
thiserror = "2.0.17"
url = "2.3.1"
futures = "0.3.25"
dirs = "6.0.0"
async-compression = { version = "0.4.36", features = ["futures-io", "gzip"] }
once_cell = "1.16.0"
serde-tuple-vec-map = "1.0.1"
base64 = "0.22.1"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.5"
tokio-stream = "0.1"
